week2/k8s/ingress-nip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-backend-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: combined.192.168.1.205.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: combined-service
            port:
              number: 5001
  - host: backend.192.168.1.205.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
  - host: frontend.192.168.1.205.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 5001
